# pico-sdk-template

./: README.md  export.sh  install.sh  uninstall.sh
src/mkpico/: CMakeLists.txt
src/mkpico/src/: CMakeLists.txt  FreeRTOSConfig.h  main.c
